# sorr-vita

./: CMakeLists.txt  COPYING  README.bennugd  README.md  prepare.cmd  prepare.sh  system.txt
cmake/: FindOGG.cmake  FindTRE.cmake  FindVorbis.cmake  common_defs.cmake  compiler_flags.cmake
core/bgdc/include/: bgdc.h  codeblock.h  compiler.h  constants.h  errors.h  errors_st.h  identifiers.h  messages.h  procdef.h  segment.h  token.h  varspace.h
core/bgdc/src/: bgdc.rc  c_code.c  c_data.c  c_debug.c  c_main.c  codeblock.c  constants.c  dcbw.c  error.c  identifier.c  main.c  main_core.c  procedure.c  resource.h  segment.c  strings.c  sysstub.c  token.c  typedef.c  varspace.c
core/bgdi/include/: bgdi.h  psp.h
core/bgdi/src/: bgdi.rc  main.c  resource.h
core/bgdrtm/include/: bgdrtm.h  sysprocs_p.h
core/bgdrtm/src/: copy.c  dcbr.c  dirs.c  fmath.c  instance.c  interpreter.c  misc.c  strings.c  sysprocs.c  varspace_file.c
core/common/: b_crypt.c  debug.c  files.c  xctype.c
core/include/: arrange.h  b_crypt.h  bgdcore.h  bgddl.h  commons_defs.h  dcb.h  dirs.h  dlvaracc.h  files.h  files_st.h  fmath.h  i_procdef.h  i_procdef_st.h  instance.h  instance_st.h  loadlib.h  monolithic_includes.h  offsets.h  pslang.h  sysprocs.h  sysprocs_st.h  typedef.h  typedef_st.h  varspace_file.h  xctype.h  xctype_st.h  xstrings.h
modules/: graphic_dependencies.dia
modules/libbgload/: bgload.c  bgload.h
modules/libblit/: g_blit.c  g_blit.h  g_pixel.c  g_pixel.h  libblit.c  libblit.h  libblit_symbols.h
modules/libdraw/: libdraw.c  libdraw.h
modules/libfont/: libfont.c  libfont.h  libfont_symbols.h
modules/libgrbase/: bitwise_map.h  g_bitmap.c  g_bitmap.h  g_blendop.c  g_blendop.h  g_clear.c  g_clear.h  g_conversion.c  g_conversion.h  g_grlib.c  g_grlib.h  g_pal.c  g_pal.h  g_region.h  libgrbase.c  libgrbase.h  libgrbase_symbols.h  resolution.h
modules/libjoy/: libjoy.c  libjoy.h  libjoy_symbols.h
modules/libjoy/caanoo/: i2c-dev.h  te9_tf9_hybrid_driver.c  te9_tf9_hybrid_driver.h
modules/libkey/: libkey.c  libkey.h  libkey_symbols.h
modules/libmouse/: libmouse.c  libmouse_symbols.h
modules/librender/: g_fade.c  g_fade.h  g_frame.c  g_frame.h  g_instance.c  g_instance.h  g_object.c  g_object.h  g_rects.c  g_rects.h  g_screen.c  g_screen.h  librender.c  librender.h  librender_symbols.h
modules/libscroll/: libscroll.c  libscroll.h  libscroll_symbols.h
modules/libsdlhandler/: libsdlhandler.c  libsdlhandler_symbols.h
modules/libtext/: libtext.c  libtext.h  libtext_symbols.h
modules/libvideo/: g_regions.c  g_regions.h  g_video.c  g_video.h  libvideo.h  libvideo_symbols.h
modules/libwm/: libwm.c  libwm_symbols.h
modules/mod_blendop/: mod_blendop.c  mod_blendop_symbols.h
modules/mod_cd/: mod_cd.c  mod_cd_symbols.h
modules/mod_chipmunk/: Arreglos.c  Arreglos.h  Chipmunk.cbp  Chipmunk.depend  Chipmunk.layout  Constraints.c  Constraints.h  Cuerpo.c  Cuerpo.h  Espacio.c  Espacio.h  Handlers.c  Handlers.h  How to compile.txt  LL.c  LL.h  Miscelanea.c  Miscelanea.h  TODO.txt  agua.c  agua.h  arbitros.c  arbitros.h  automGenTerr.c  automGenTerr.h  cambiaColores.c  constantes.h  convexHull.c  convexHull.h  estructuras.h  fft.c  globales.h  inl.h  iteradores de shapes y constraints.prg  locales.h  main.c  mod_chipmunk_symbols.h
modules/mod_chipmunk/Examples/: Errores.txt  Test00.prg  Test01.prg  Test11.prg  Test12.prg  Test13.prg  Test14.prg  Test15.prg  Test17.prg  Test18.prg  catapulta.fpg  graficos.fpg  jkeys.lib  piso.cpt  test.TXT  test02.prg  test03.prg  test04.prg  test05.prg  test06.prg  test07.prg  test08.prg  test09.prg  test10.prg  (+3 more)
modules/mod_curl/: main.prg  make_osx.sh  mod_curl.c  mod_curl_symbols.h
modules/mod_debug/: mod_debug.c  mod_debug_symbols.h  systexts.c
modules/mod_dir/: mod_dir.c  mod_dir_symbols.h
modules/mod_draw/: mod_draw.c  mod_draw_symbols.h
modules/mod_effects/: mod_effects.c  mod_effects_symbols.h
modules/mod_file/: mod_file.c  mod_file_symbols.h
modules/mod_flic/: mod_flic.c  mod_flic.h  mod_flic_symbols.h
modules/mod_fmodex/: COPYING  README  main.prg  mod_fmodex.c  mod_fmodex_symbols.h
modules/mod_fsock/: fsock.c  fsock_symbols.h
modules/mod_grproc/: mod_grproc.c  mod_grproc_symbols.h
modules/mod_iap/: main.prg  make.sh  make_osx.sh  make_win32.sh  mod_iap.c  mod_iap_fake.c  mod_iap_symbols.h
modules/mod_iconv/: iconv.c  iconv_symbols.h
modules/mod_image/: image.c  image_symbols.h
modules/mod_joy/: mod_joy.c  mod_joy_symbols.h
modules/mod_key/: mod_key.c  mod_key_symbols.h
modules/mod_m7/: mod_m7.c  mod_m7.h  mod_m7_symbols.h
modules/mod_map/: file_fnt.c  file_fpg.c  file_map.c  file_pal.c  file_pcx.c  file_png.c  mod_map.c  mod_map.h  mod_map_symbols.h
modules/mod_math/: mod_math.c  mod_math_symbols.h
modules/mod_mathi/: mod_mathi.c  mod_mathi_symbols.h
modules/mod_mem/: mod_mem.c  mod_mem_symbols.h
modules/mod_mouse/: mod_mouse_symbols.h
modules/mod_multi/: mod_multi.c  mod_multi_symbols.h
modules/mod_path/: mod_path.c  mod_path_symbols.h
modules/mod_proc/: mod_proc.c  mod_proc_symbols.h
modules/mod_rand/: mod_rand.c  mod_rand_symbols.h
modules/mod_regex/: mod_regex.c  mod_regex_symbols.h
modules/mod_say/: mod_say.c  mod_say_symbols.h
modules/mod_screen/: mod_screen.c  mod_screen_symbols.h
modules/mod_scroll/: mod_scroll.c  mod_scroll_symbols.h
modules/mod_sort/: mod_sort.c  mod_sort_symbols.h
modules/mod_sound/: mod_sound.c  mod_sound_symbols.h
modules/mod_sqlite3/: mod_sqlite3.c  mod_sqlite3_symbols.h
modules/mod_string/: mod_string.c  mod_string_symbols.h
modules/mod_sys/: mod_sys.c  mod_sys_symbols.h
modules/mod_text/: mod_text.c  mod_text_symbols.h
modules/mod_theora/: make.sh  make_osx.sh  mod_theora.c  mod_theora.prg  theoraplay.c  theoraplay.h  theoraplay_cvtrgb.h
modules/mod_time/: mod_time.c  mod_time_symbols.h
modules/mod_timers/: mod_timers.c  mod_timers_symbols.h
modules/mod_video/: mod_video.c  mod_video_symbols.h
modules/mod_wm/: mod_wm.c  mod_wm_symbols.h
modules/mod_wpad/: mod_wpad.c  mod_wpad.h  mod_wpad_symbols.h
tools/: extract_stub.py
(+13 files in other folders)
